# ode-lab

./: .gitignore  CMakeList.txt  CMakeLists.txt
.github/workflows/: ci.yml
examples/: CMakeList.txt  sandbox.cpp
examples/lotka_volterra/: CMakeLists.txt  main.cpp
examples/sandbox/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt  monorepo.cmake
libs/math/: CMakeList.txt  CMakeLists.txt  ling.hpp
libs/math/include/: buffer.hpp  ling.hpp
libs/qode/: CMakeLists.txt  qode1.hpp  ricatti.hpp  verlet.hpp
libs/rkgl/: CMakeLists.txt
libs/rkgl/include/: minijacobian.hpp  rkgl.hpp
libs/rkgs/: CMakeLists.txt  minijacobian.hpp
libs/verlet/: CMakeLists.txt
libs/verlet/include/: ricatti.hpp  verlet.hpp
tests/: CMakeLists.txt  linsolve.cpp  ricatti.cpp  smoke.cpp
tests/utests/: CMakeLists.txt  ling_test.hpp  ricatti.cpp  utest_frame.hpp  utest_run.cpp
