cmake_minimum_required(VERSION 3.20)

include(FetchContent)

FetchContent_Declare(
  Catch2
  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
  GIT_TAG v3.5.4
)
FetchContent_MakeAvailable(Catch2)

add_executable(ode_lab_tests
  smoke.cpp
  ricatti.cpp
  linsolve.cpp
)

target_link_libraries(ode_lab_tests
  PRIVATE
    Catch2::Catch2WithMain
    verlet
    math
)

include(Catch)
catch_discover_tests(ode_lab_tests)